--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'Love stories'
 - !lcsh 'New Mexico -- Fiction'
 - !lcsh 'Horses -- Fiction'
+- GITenberg
 title: 'Bred of the Desert: A Horse and a Romance'
 url: http://www.gutenberg.org/ebooks/31380
